--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1 style="margin: auto; text-transform: capitalize">
       bu bir java script ödev uygulamasıdır.
     </h1>
-    <script src="/js/task-1.js">
-
-    </script>
+    <script src="/js/task-1.js"></script>
+    <script src="/js/task-1.js"></script>
+    <script src="/js/task-1.js"></script>
   </body>
 </html>
