--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 style="margin: auto; text-transform: capitalize">
-      bu bir java script ödev uygulamasıdır.
-    </h1>
-    <script src="js/task-1.js"></script>
-    <script src="js/task-2.js"></script>
-    <script src="js/task-3.js"></script>
+    
+    <script src="./js/task-1.js"></script>
+    <script src="./js/task-2.js"></script>
+    <script src="./js/task-3.js"></script>
   </body>
 </html>
